[package]
name = "the-news-letter"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "that-news-letter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"]}
config = "0.11.0"
chrono = "0.4.15"
uuid = {version = "0.8.1", features = ["v4"]}
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "registry"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.1.0"
once_cell = "1.19.0"
secrecy = { version = "0.8.0", features = ["serde"] }

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate"]

[dev-dependencies]
reqwest = "0.11"
once_cell = "1.19.0"
